@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - support filter regex syntax: attr ~~ /value/
          - return error if using unknown check arguments
+         - fix check_drivesize showing wrong disk on linux
 
 0.10     Sun Oct 22 21:22:47 CEST 2023
          - windows: add firewall on program, not ports
